[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Mark Bell <skrambelled@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mltk = "^0.0.5"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
